# gemini-file-viewer-linux-enhanced-ui-features

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
.cargo/: config.toml
gemini-file-viewer-js/renderer/: index.html
gemini-file-viewer-py/: README.md  main.py
gfv-js/: GeminiFileViewer-Desktop.cmd  main.js  package-lock.json  package.json
gfv_icon_pack/: README.md
gfv_icon_pack/linux/: README_linux.md  gfv.desktop  install_user_icons.sh
gfv_icon_pack/windows/: README_windows.md  build.rs
os/linux/: gfv.desktop
packaging/: gfv.desktop  install_linux_icons.sh
packaging/windows/: README.md
scripts/: build-musl.sh  build-release.sh  build-windows-mingw.sh  build-windows.ps1
src/: app.rs  central.rs  highlight.rs  highlight_syntect.rs  input.rs  main.rs  search.rs  settings.rs  style.rs  ui.rs
src/app/: ops.rs  update.rs
src/ui/: mod.rs  search_bar.rs  status.rs  tab_strip.rs  toolbar.rs  windows.rs
