[package]
name = "gfv"
version = "2.0.2"
edition = "2024"
build = "build.rs"
default-run = "gfv"

[dependencies]
eframe = "0.31.0"
rfd = "0.14.1"
image = { version = "0.25.1", features = ["png", "jpeg", "gif", "bmp", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
syntect = { version = "5.2.0", features = ["dump-load", "parsing", "html", "regex-onig"] }
regex = "1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
ico = "0.3"

[profile.release]
# Smaller binary tweaks
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
# Strip symbols if supported by toolchain (Cargo >= 1.84)
strip = true
